examples/valid/while.lama
int x ;
x = 1 ;
while ( x < 6 ) {
    print x ;
    x ++ ;
}
print x ;