examples/invalid/while.lama
int x ;
x = 1 ;
while ( x ++ ) {
    print x ;
    x ++ ;
}
print x ;